# CrewChat

./: .gitignore  docker-compose.yml  vercel.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 55c20ad21fd4_add_conversations_and_direct_messages_.py  680723a80b47_add_channels_and_channel_members_tables.py  bae9269136fc_add_messages_table.py  ee1c2eaa8683_initial_auth_tables.py  f0063e230479_add_org_invites_table.py
backend/src/: main.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/channels/: models.py  router.py  schemas.py  service.py  ws.py
backend/src/core/: config.py  database.py
backend/src/dms/: models.py  router.py  schemas.py  service.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChannelView.tsx  ConfirmDialog.tsx  DMView.tsx  InviteModal.tsx  Logo.tsx  Sidebar.tsx
frontend/src/pages/: AcceptInvitePage.tsx  ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/store/: auth.ts
